@@ -20,11 +20,9 @@ import com.nhnacademy.messenger.common.util.MessageUtils;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Map;
-import java.util.Objects;
+import java.util.Collections;
 
-public class ChatCommand implements ClientCommand {
+public class UserListCommand implements ClientCommand {
 
     @Override
     public void execute(String[] args, OutputStream out) {
@@ -35,26 +33,9 @@ public class ChatCommand implements ClientCommand {
             return;
         }
 
-        if (args.length < 2) {
-            return;
-        }
-
-        String[] messageParts = Arrays.copyOfRange(args, 1, args.length);
-        String message = String.join(" ", messageParts);
-
-        if (message.trim().isEmpty()) {
-            return;
-        }
-
-        Long currentRoomId = ClientSession.getCurrentRoomId();
-
-        if (currentRoomId == null) {
-            System.out.println("[Client] 채팅방에 먼저 입장을 해야 합니다.");
-        }
-
         MessageRequest request = new MessageRequest(
-                new MessageRequest.RequestHeader(MessageType.CHAT_MESSAGE, LocalDateTime.now().toString(), sessionId),
-                Map.of("roomId", Objects.requireNonNull(currentRoomId), "message", message));
+                new MessageRequest.RequestHeader(MessageType.USER_LIST, LocalDateTime.now().toString(), sessionId),
+                Collections.emptyMap());
 
         try {
             MessageUtils.send(out, request);
